<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:paddingLeft="6dip" android:paddingRight="6dip">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/label_url" android:paddingTop="10dip" />
		<EditText android:id="@+id/edit_url" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/message_tip"
			android:paddingBottom="10dip" />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center">
			<Button android:id="@+id/button_create" android:text="@string/button_create"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<Button android:id="@+id/button_cancel" android:text="@string/button_cancel"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>

